# ROCm-Studio

./: .gitignore  README.md  design-reference.html  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai_stack.rs  benchmark.rs  commands.rs  containers.rs  db.rs  diagnostics.rs  environments.rs  error.rs  gpu.rs  lib.rs  main.rs  migration.rs  models.rs  monitoring.rs  profiler.rs  rocm.rs  system.rs
src/components/: Marquee.tsx  MetricChart.tsx  PageHeader.tsx  Panel.tsx  Shell.tsx  Sidebar.tsx  TopBar.tsx
src/lib/: api.ts  format.ts  store.ts
src/pages/: AiStack.tsx  Benchmark.tsx  Compatibility.tsx  Containers.tsx  Dashboard.tsx  Diagnostics.tsx  Environments.tsx  GpuMonitor.tsx  Inference.tsx  Migration.tsx  Models.tsx  Profiler.tsx  RocmManager.tsx
