[package]
name = "rocm-forge"
version = "0.1.0"
description = "ROCm Forge — mission control for the ROCm ecosystem."
authors = ["ROCm Forge"]
edition = "2021"

[lib]
name = "rocm_forge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = [] }
tauri-plugin-shell = "2.2"
tauri-plugin-dialog = "2.2"
tauri-plugin-fs = "2.2"
tauri-plugin-http = { version = "2.2", features = ["unsafe-headers"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
rusqlite = { version = "0.32", features = ["bundled"] }
sysinfo = "0.32"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "1"
dirs = "5"
zip = "2"
walkdir = "2"
regex = "1"
futures-util = "0.3"

[target.'cfg(windows)'.dependencies]
wmi = "0.14"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
